add kevin's essays

--- a/essays.html
+++ b/essays.html
@@ -34,6 +34,15 @@
         </p>
       </article>
     </section>
+    <section>
+      <article>
+        <p>
+          <a href="assets/essays/sun_kevin.pdf" target="_blank">Economics of Open Source</a>: An essay about how open source software can alter their business models to compete in the market.
+          <br>
+          <i>by Kevin Sun</i>
+        </p>
+      </article>
+    </section>
   </main>
   <footer>
   </footer>
