add pyanalytics to projects

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,15 @@
         <p>
       </article>
     </section>
+    <section id="projects">
+      <article>
+        <h4><a href="https://github.com/ksun0/pyanalytics">pyanalytics</a> by Kevin Sun</h4>
+        <p>
+          Python web analytics library built on Goolge Analytics API. Collect data from your websites and receive insights.
+        </p>
+      </article>
+      <!-- include additional projects as <articles> below -->
+    </section>
   </main>
   <footer>
   </footer>
